change component value to Main
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWorkflow/trunk@30819 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
   <target name="ApiCommonWorkflow/Main-Installation" depends="ProjectTree">
     <ant target="defaultComponentInstall">
       <property name="project" value="ApiCommonWorkflow"/>
-      <property name="component" value="Load"/>
+      <property name="component" value="Main"/>
     </ant>
   </target>  
  
