add workflowResolveAll command in build script, but commented out at this time
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWorkflow/trunk@39813 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -90,6 +90,13 @@
       <property name="project" value="ApiCommonWorkflow"/>
       <property name="component" value="Main"/>
     </ant>
+
+    <!-- call a command to resolve out-dated master files -->
+<!--
+    <exec executable="workflowResolveAll">
+    </exec>
+-->
+
   </target>  
  
 
