--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@
 
   <target name="ApiCommonWorkflow-Installation" depends="ApiCommonData-Installation,
                                             ReFlow-Installation,
-                                            ApiCommonWorkflow/Main-Installation">
+                                            ApiCommonWorkflow/Main-Installation,                                            ApiCommonWorkflow/DatasetClass-Installation">
 
     <ant target="defaultProjectInstall"/>
   </target>  
@@ -96,6 +96,14 @@
     <exec executable="workflowResolveAll">
     </exec>
 -->
+
+  </target>  
+ 
+  <target name="ApiCommonWorkflow/DatasetClass-Installation" depends="ProjectTree">
+    <ant target="defaultComponentInstall">
+      <property name="project" value="ApiCommonWorkflow"/>
+      <property name="component" value="DatasetClass"/>
+    </ant>
 
   </target>  
  
