--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,13 @@
     </ant>
   </target>  
 
+  <target name="GGTools-Installation">
+    <ant antfile="../GGTools/build.xml" target="GGTools-Installation">
+      <property name="project" value="GGTools"/>
+      <property name="version" value="??"/>
+    </ant>
+  </target>  
+
 
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo    Checkout    oooooooooooooooooooooooooo -->
@@ -34,11 +41,18 @@
   <target name="ReFlow-Checkout" unless="ReFlow.present"> 
     <ant target="defaultProjectCheckout" inheritAll="false"> 
       <property name="svnurl" value="https://www.cbil.upenn.edu/svn/apidb/ReFlow" />
-      <property name="project" value="ApiCommonData"/>
+      <property name="project" value="ReFlow"/>
       <property name="version" value="??"/>
     </ant>
   </target>    
 
+  <target name="GGTools-Checkout" unless="GGTools.present"> 
+    <ant target="defaultProjectCheckout" inheritAll="false"> 
+      <property name="svnurl" value="https://www.cbil.upenn.edu/svn/apidb/GGTools" />
+      <property name="project" value="GGTools"/>
+      <property name="version" value="??"/>
+    </ant>
+  </target>    
 
   
   <target name="ApiCommonWorkflow-ChildCheckout">
@@ -63,6 +77,7 @@
 
   <target name="ApiCommonWorkflow-Installation" depends="ApiCommonData-Installation,
                                             ReFlow-Installation,
+                                            GGTools-Installation,
                                             ApiCommonWorkflow/Main-Installation,                                            ApiCommonWorkflow/DatasetClass-Installation">
 
     <ant target="defaultProjectInstall"/>
