remove datasetclass component
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWorkflow/trunk@45657 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -78,7 +78,7 @@
   <target name="ApiCommonWorkflow-Installation" depends="ApiCommonData-Installation,
                                             ReFlow-Installation,
                                             GGTools-Installation,
-                                            ApiCommonWorkflow/Main-Installation,                                            ApiCommonWorkflow/DatasetClass-Installation">
+                                            ApiCommonWorkflow/Main-Installation">
 
     <ant target="defaultProjectInstall"/>
   </target>  
@@ -114,15 +114,6 @@
 
   </target>  
  
-  <target name="ApiCommonWorkflow/DatasetClass-Installation" depends="ProjectTree">
-    <ant target="defaultComponentInstall">
-      <property name="project" value="ApiCommonWorkflow"/>
-      <property name="component" value="DatasetClass"/>
-    </ant>
-
-  </target>  
- 
-
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo  Distributable  ooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
