--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
 
   <target name="ApiCommonData-Checkout" unless="ApiCommonData.present"> 
     <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://www.cbil.upenn.edu/svn/apidb/ApiCommonData" />
+      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonData" />
       <property name="project" value="ApiCommonData"/>
       <property name="version" value="??"/>
     </ant>
@@ -40,7 +40,7 @@
 
   <target name="ReFlow-Checkout" unless="ReFlow.present"> 
     <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://www.cbil.upenn.edu/svn/apidb/ReFlow" />
+      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/ReFlow" />
       <property name="project" value="ReFlow"/>
       <property name="version" value="??"/>
     </ant>
@@ -48,7 +48,7 @@
 
   <target name="GGTools-Checkout" unless="GGTools.present"> 
     <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://www.cbil.upenn.edu/svn/apidb/GGTools" />
+      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/GGTools" />
       <property name="project" value="GGTools"/>
       <property name="version" value="??"/>
     </ant>
