git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWorkflow/branches/purge-svn@100570 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -5,77 +5,27 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="ApiCommonData-Installation">
-    <ant antfile="../ApiCommonData/build.xml" target="ApiCommonData-Installation">
-      <property name="project" value="ApiCommonData"/>
-      <property name="version" value="??"/>
+    <ant antfile="../ApiCommonData/build.xml"
+         target="ApiCommonData-Installation">
+      <property name="project" value="ApiCommonData" />
+      <property name="version" value="??" />
     </ant>
-  </target>  
+  </target>
 
   <target name="ReFlow-Installation">
     <ant antfile="../ReFlow/build.xml" target="ReFlow-Installation">
-      <property name="project" value="ReFlow"/>
-      <property name="version" value="??"/>
+      <property name="project" value="ReFlow" />
+      <property name="version" value="??" />
     </ant>
-  </target>  
+  </target>
 
   <target name="GGTools-Installation">
     <ant antfile="../GGTools/build.xml" target="GGTools-Installation">
-      <property name="project" value="GGTools"/>
-      <property name="version" value="??"/>
-    </ant>
-  </target>  
-
-
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooo    Checkout    oooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-
-  <target name="ApiCommonData-Checkout" unless="ApiCommonData.present"> 
-    <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonData" />
-      <property name="project" value="ApiCommonData"/>
-      <property name="version" value="??"/>
-    </ant>
-  </target>    
-
-  <target name="ReFlow-Checkout" unless="ReFlow.present"> 
-    <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/ReFlow" />
-      <property name="project" value="ReFlow"/>
-      <property name="version" value="??"/>
-    </ant>
-  </target>    
-
-  <target name="GGTools-Checkout" unless="GGTools.present"> 
-    <ant target="defaultProjectCheckout" inheritAll="false"> 
-      <property name="svnurl" value="https://cbilsvn.pmacs.upenn.edu/svn/apidb/GGTools" />
-      <property name="project" value="GGTools"/>
-      <property name="version" value="??"/>
-    </ant>
-  </target>    
-
-  
-  <target name="ApiCommonWorkflow-ChildCheckout">
-    <available file="../ApiCommonData" type="dir" property="ApiCommonData.present" />
-    <available file="../ReFlow" type="dir" property="ReFlow.present" />
-    <available file="../GGTools" type="dir" property="GGTools.present" />
-    <antcall target="ApiCommonData-Checkout" />
-    <antcall target="ReFlow-Checkout" />
-    <antcall target="GGTools-Checkout" />
-  </target>
-  
-  
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooo    Update    oooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-
-  <target name="ApiCommonWorkflow-ChildUpdate" >
-    <ant target="defaultProjectUpdate">
-      <property name="project" value="ApiCommonData"/>
-      <property name="project" value="GGTools"/>
-      <property name="project" value="ReFlow"/>
+      <property name="project" value="GGTools" />
+      <property name="version" value="??" />
     </ant>
   </target>
+
 
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo  Installation  oooooooooooooooooooooooooo -->
@@ -86,20 +36,20 @@
                                                          GGTools-Installation,
                                             ApiCommonWorkflow/Main-Installation">
 
-    <ant target="defaultProjectInstall"/>
-  </target>  
-   
+    <ant target="defaultProjectInstall" />
+  </target>
+
 
   <!-- oooooooooooooooooo  Installation Postprocess  ooooooooooooooooooooo -->
 
   <target name="ApiCommonWorkflow-Installation-postprocess">
-    <echo message="Postprocessing the ApiCommonWorkflow installation"/>
+    <echo message="Postprocessing the ApiCommonWorkflow installation" />
 
-    <replace dir="${targetDir}/bin" 
-             propertyFile="${targetDir}/config/replacements.prop" > 
+    <replace dir="${targetDir}/bin"
+             propertyFile="${targetDir}/config/replacements.prop">
       <include name="**/*" />
-      <replacefilter token="@perl@" property="perl"/>
-    </replace> 
+      <replacefilter token="@perl@" property="perl" />
+    </replace>
 
   </target>
 
@@ -108,18 +58,18 @@
 
   <target name="ApiCommonWorkflow/Main-Installation" depends="ProjectTree">
     <ant target="defaultComponentInstall">
-      <property name="project" value="ApiCommonWorkflow"/>
-      <property name="component" value="Main"/>
+      <property name="project" value="ApiCommonWorkflow" />
+      <property name="component" value="Main" />
     </ant>
 
     <!-- call a command to resolve out-dated master files -->
-<!--
-    <exec executable="workflowResolveAll">
-    </exec>
--->
+    <!--
+        <exec executable="workflowResolveAll">
+        </exec>
+    -->
 
-  </target>  
- 
+  </target>
+
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo  Distributable  ooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
@@ -127,11 +77,11 @@
   <target name="ApiCommonWorkflow-Distributable" depends="ProjectTree">
 
     <copy todir="${targetDir}">
-      <fileset dir="${projectsDir}" >
+      <fileset dir="${projectsDir}">
         <exclude name="**/CVS/*" />
       </fileset>
-    </copy>  
-  </target>  
+    </copy>
+  </target>
 
 
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
@@ -139,8 +89,8 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="ProjectTree" if="${checkout}">
-    <ant target="projectCheckOut"/>
-  </target>  
+    <ant target="projectCheckOut" />
+  </target>
 
 </project>
 
