generateFromDtasets requires classes in ebrcmodelcommon

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,16 @@
     </ant>
   </target>
 
+  <target name="EbrcModelCommon/Model-Installation">
+    <ant antfile="../EbrcModelCommon/build.xml"
+         target="EbrcModelCommon-Installation">
+      <property name="project" value="EbrcModelCommon/Model" />
+      <property name="component" value="Model" />
+      <property name="version" value="??" />
+    </ant>
+  </target>
+
+
   <target name="ReFlow-Installation">
     <ant antfile="../ReFlow/build.xml" target="ReFlow-Installation">
       <property name="project" value="ReFlow" />
@@ -34,6 +44,7 @@
   <target name="ApiCommonWorkflow-Installation" depends="ApiCommonData-Installation,
                                                          ReFlow-Installation,
                                                          GGTools-Installation,
+                                                         EbrcModelCommon/Model-Installation,
                                             ApiCommonWorkflow/Main-Installation">
 
     <ant target="defaultProjectInstall" />
