Fix build.xml weirdness

--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
   <target name="EbrcModelCommon/Model-Installation">
     <ant antfile="../EbrcModelCommon/build.xml"
          target="EbrcModelCommon-Installation">
-      <property name="project" value="EbrcModelCommon/Model" />
+      <property name="project" value="EbrcModelCommon" />
       <property name="component" value="Model" />
       <property name="version" value="??" />
     </ant>
